--- a/src/app/components/chart/chart.component.html
+++ b/src/app/components/chart/chart.component.html
@@ -1,1 +1,7 @@
-<p>chart works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-8 mx-auto">
+      <canvas id="myChart"></canvas>
+    </div>
+  </div>
+</div>
