--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,30 @@
-<app-filter></app-filter>
-<app-chart></app-chart>
+<div class="container">
+
+  <div class="row" style="margin-top: 30px;">
+    <div class="col-12 col-lg-8 mx-auto">
+      <app-filter></app-filter>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-12 col-lg-8 mx-auto">
+      <app-chart></app-chart>
+    </div>
+  </div>
+
+  <div class="row" style="margin-top: 30px;">
+    <div class="col-12 col-lg-8 mx-auto">
+      <app-chart2></app-chart2>
+    </div>
+  </div>
+
+  <div class="row" style="margin-top: 30px;">
+    <div class="col-12 col-lg-8 mx-auto" style="margin-bottom: 30px;">
+      <app-chart3></app-chart3>
+    </div>
+  </div>
+</div>
+
+
+
+
