--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,5 +3,8 @@
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
 
-html, body { height: 100%; }
+html, body {
+  height: 100%;
+  background-color: #eee;
+ }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
