--- a/src/app/components/chart2/chart2.component.html
+++ b/src/app/components/chart2/chart2.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <canvas id="myChart"></canvas>
+      <canvas id="myChart2"></canvas>
     </div>
   </div>
 </div>
