--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,10 +19,17 @@
   </div>
 
   <div class="row" style="margin-top: 30px;">
-    <div class="col-12 col-lg-8 mx-auto" style="margin-bottom: 30px;">
+    <div class="col-12 col-lg-8 mx-auto">
       <app-chart3></app-chart3>
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-12 col-lg-10 mx-auto" style="margin-top: 30px;margin-bottom: 40px;">
+      <app-table></app-table>
+    </div>
+  </div>
+
 </div>
 
 
